# python-mobile-test-template

./: .editorconfig  .env.android.defaults  .env.example  .env.ios.defaults  .gitignore  README.md  config.py  project.py  pyproject.toml
python_mobile_test_template/assist/: file.py
python_mobile_test_template/assist/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
python_mobile_test_template/model/: __init__.py  app.py  feed_view.py  navigation_tabs.py  onboarding.py  page_view.py  search_view.py
python_mobile_test_template/support/: mobile_selectors.py  path.py
tests/: acceptance_test.py  conftest.py  test_smoke.py
typings/selene/core/: entity.pyi
