[tool.poetry]
name = "python-mobile-test-template"
version = "0.2.0"
description = "fully charged mobile end-to-end testing framework with selene + appium + pytest"
authors = ["Iakiv Kramarenko <yashaka@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_mobile_test_template"}]

[tool.poetry.dependencies]
python = "^3.12"
selene = { git = "https://github.com/yashaka/selene.git", rev = "a6b1bd4" }
Appium-Python-Client = "^4.2.0 "
pytest = "^8.3.3 "
pytest-xdist = "^3.6.1"
python-dotenv = "^1.0.1"
pydantic = "1.10.17"

[tool.poetry.dev-dependencies]
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
target-version = ['py312']
skip-string-normalization = 1
